--- a/views/form/form.ejs
+++ b/views/form/form.ejs
@@ -4,5 +4,12 @@
     </head>
     <body>
         <h1>This is a form page</h1>
+        <form method="post" action="/new">
+            <label for="author">Author: </label>
+            <input type="text" name="author">
+            <label for="message">Message: </label>
+            <input type="text" name="message">
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
